# gpuR

./: .Rbuildignore  .Renviron  .gitignore  .travis.yml  DESCRIPTION  INSTALL  NAMESPACE  README.md  appveyor.yml  bigGPU.Rproj  check_vienna.cpp  cleanup  cleanup.win  configure  configure.ac  configure.win  cran-comments.md  gemm.cpp  gpuMatMult.bk  gpuR.Rproj  index.html  params.json
CUDA/: cuda_sgemm.cpp
R/: RcppExports.R  asserts.R  chol.R  class-gpuMatrix.R  class-gpuVector.R  class-vclMatrix.R  class-vclVector.R  classes.R  custom_opencl.R  eigen.R  extract-gpuMatrix.R  extract-gpuVector.R  extract-vclMatrix.R  extract-vclVector.R  flags.R  generics.R  gpuBigMatrix.R  gpuMatrix.R  gpuVector.R  hello-bigGPU.R  hello-gpuR.R  inplace.R  methods-gpuMatrix.R  methods-gpuVector.R  methods-gpuVectorSlice.R  methods-vclMatrix.R  methods-vclVector.R  methods.R  methods_matrix.R  methods_vector.R  net.R  norm.R  pmax.R  print.R  qr.R  sign.R  solve.R  svd.R  test_utils.R  typeof.R  (+11 more)
include/CL/: cl_platform.h
include/gpuR/: dynVCLMat.hpp  dynVCLVec.hpp  getVCLptr.hpp  utils.hpp  windows_check.hpp
include/loader/: Makefile
inst/: CITATION  NEWS.Rd
inst/CL/: basic_axpy.cl  basic_gemm.cl  basic_gemm2.cl  basic_matrix_mult_kernel.cl  dLogDeriv.cl  dMatSign.cl  dMat_pmax.cl  dMat_pmin.cl  dPermute.cl  dScalarAXPY.cl  dScalarElemDiv.cl  dVecLogDeriv.cl  dVecSign.cl  dVec_pmax.cl  dVec_pmin.cl  dcholesky.cl  drprop_plus.cl  dset_row_order.cl  dset_row_order2.cl  fLogDeriv.cl  fMatSign.cl  fMat_pmax.cl  fMat_pmin.cl  fScalarAXPY.cl  fScalarElemDiv.cl  fVecLogDeriv.cl  fVecSign.cl  fVec_pmax.cl  fVec_pmin.cl  fcholesky.cl  frprop_plus.cl  fset_row_order.cl  fset_row_order2.cl  iMatSign.cl  iMat_pmax.cl  iMat_pmin.cl  iScalarAXPY.cl  iScalarElemDiv.cl  iVecSign.cl  iVec_pmax.cl  (+4 more)
inst/CUDA/common/: findgllib.mk
inst/doc/: custom_ocl_gpuR.R  custom_ocl_gpuR.Rnw  gpuR.R  gpuR.Rnw
inst/include/: arma_helpers.hpp  cl_checks.hpp  cl_helpers.hpp  eigen_helpers.hpp  opencl_utils.h  simple_sgemm.h  vcl_axpy.hpp  vcl_big_axpy.hpp  vcl_big_gemm.hpp  vcl_gemm.hpp  vcl_vec_axpy.hpp
inst/include/CL/: cl.h  cl.hpp  cl_ext.h  cl_gl.h  cl_gl_ext.h  opencl.h
inst/include/gpuR/: cl_helpers.hpp  dynEigen.hpp  dynEigenMat.hpp  dynEigenVec.hpp  dynEigenVecSlice.hpp  dynVCLMat.hpp  dynVCLVec.hpp  eigen_helpers.hpp  eigen_templates.hpp  getVCLptr.hpp  utils.hpp  vcl_axpy.hpp  vcl_colMeans.hpp  vcl_colSums.hpp  vcl_crossprod.hpp  vcl_eigen.hpp  vcl_gemm.hpp  vcl_helpers.hpp  vcl_pmcc.hpp  vcl_rowMeans.hpp  vcl_rowSums.hpp  vcl_vec_axpy.hpp  vcl_vec_helpers.hpp
inst/src/: base_custom_cuda.cpp  base_custom_opencl.cpp
man/: Arith-gpuMatrix-gpuMatrix-method.Rd  Arith-gpuMatrix-missing-method.Rd  Arith-gpuMatrix-numeric-method.Rd  Arith-gpuVector-gpuVector-method.Rd  Arith-gpuVector-missing-method.Rd  Arith-gpuVector-numeric-method.Rd  Arith-gpuVectorSlice-gpuVectorSlice-method.Rd  Arith-igpuVector-igpuVector-method.Rd  Arith-methods.Rd  Arith-numeric-gpuMatrix-method.Rd  Arith-numeric-gpuVector-method.Rd  Arith-numeric-vclMatrix-method.Rd  Arith-numeric-vclVector-method.Rd  Arith-vclMatrix-missing-method.Rd  Arith-vclMatrix-numeric-method.Rd  Arith-vclMatrix-vclMatrix-method.Rd  Arith-vclVector-missing-method.Rd  Arith-vclVector-numeric-method.Rd  Arith-vclVector-vclVector-method.Rd  Compare-gpuVector-vector-method.Rd  Compare-methods.Rd  Compare-vector-gpuVector-method.Rd  Math-gpuMatrix-method.Rd  Math-gpuVector-method.Rd  Math-methods.Rd  Math-vclMatrix-method.Rd  Math-vclVector-method.Rd  Summary-gpuMatrix-method.Rd  Summary-gpuVector-method.Rd  Summary-methods.Rd  Summary-vclMatrix-method.Rd  Summary-vclVector-method.Rd  as.gpuMatrix-methods.Rd  as.gpuVector-methods.Rd  as.vclVector-methods.Rd  assert_has_double.Rd  bigGPU-package.Rd  cgpuMatrix-class.Rd  chol-methods.Rd  colnames-methods.Rd  (+124 more)
scratch/: cl_kernels_gemm.cpp  initmat.cpp  more_cl_kernels_gemm.cpp  testSgemm.cpp  test_gemm.R
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  bigMatrixUtils.cpp  chol.cpp  context.cpp  custom_math.cpp  detectCPUs.cpp  detectGPUs.cpp  detectPlatforms.cpp  device.cpp  device_has_double.cpp  dynEigen.cpp  dynEigenMat.cpp  dynEigenVec.cpp  dynVCLMat.cpp  dynVCLVec.cpp  gpuBigMatrix_daxpy.cpp  gpuBigMatrix_dgemm.cpp  gpuBigMatrix_iaxpy.cpp  gpuBigMatrix_igemm.cpp  gpuBigMatrix_saxpy.cpp  gpuBigMatrix_sgemm.cpp  gpuEigenPtr.cpp  gpuInfo.cpp  gpuMatrix_daxpy.cpp  gpuMatrix_dgemm.cpp  gpuMatrix_iaxpy.cpp  gpuMatrix_igemm.cpp  gpuMatrix_saxpy.cpp  gpuMatrix_sgemm.cpp  gpuVector_iaxpy.cpp  gpu_dgemm.cpp  gpu_igemm.cpp  gpu_matrix_algebra.cpp  gpu_sgemm.cpp  gpu_vector_add.cpp  gpu_vector_algebra.cpp  net.cpp  (+33 more)
src/loader/: Makefile  icd.c  icd_dispatch.c  icd_windows.c
tests/: testthat.R
tests/testthat/: test_cpu_deepcopy.R  test_cpu_gpuMatrixBlock_algebra.R  test_cpu_gpuMatrix_algebra.R  test_cpu_gpuMatrix_chol.R  test_cpu_gpuMatrix_classes.R  test_cpu_gpuMatrix_cov.R  test_cpu_gpuMatrix_dist.R  test_cpu_gpuMatrix_eigen.R  test_cpu_gpuMatrix_math.R  test_cpu_gpuMatrix_norm.R  test_cpu_gpuMatrix_qr.R  test_cpu_gpuMatrix_row_col.R  test_cpu_gpuMatrix_solve.R  test_cpu_gpuMatrix_svd.R  test_cpu_gpuMatrix_utils.R  test_cpu_gpuVector_algebra.R  test_cpu_gpuVector_classes.R  test_cpu_gpuVector_math.R  test_cpu_gpuVector_utils.R  test_cpu_inplace_algebra.R  test_cpu_inplace_math.R  test_cpu_inplace_operations.R  test_cpu_order.R  test_cpu_shared_memory.R  test_cpu_vclMatrixBlock_algebra.R  test_cpu_vclMatrix_algebra.R  test_cpu_vclMatrix_chol.R  test_cpu_vclMatrix_classes.R  test_cpu_vclMatrix_cov.R  test_cpu_vclMatrix_dist.R  test_cpu_vclMatrix_eigen.R  test_cpu_vclMatrix_norm.R  test_cpu_vclMatrix_qr.R  test_cpu_vclMatrix_row_col.R  test_cpu_vclMatrix_solve.R  test_cpu_vclMatrix_svd.R  test_cpu_vclMatrtix_math.R  test_cpu_vclMatrtix_utils.R  test_cpu_vclVector_algebra.R  test_cpu_vclVector_classes.R  (+67 more)
vignettes/: custom_ocl_gpuR-concordance.tex  custom_ocl_gpuR.R  custom_ocl_gpuR.Rnw  custom_ocl_gpuR.aux  custom_ocl_gpuR.out  custom_ocl_gpuR.tex  gpuR-concordance.tex  gpuR.Rnw
(+36 files in other folders)
